@@ -718,6 +718,15 @@ static s32 SEQ_MIDI_IN_Receive_Note(u8 bus, u8 note, u8 velocity)
     return -1;
 
   ///////////////////////////////////////////////////////////////////////////
+  // Trigger Note Requests for all tracks assigned to this bus
+  ///////////////////////////////////////////////////////////////////////////
+
+  if( velocity ) {
+    SEQ_CORE_StepTriggerReq(bus);
+  }
+
+
+  ///////////////////////////////////////////////////////////////////////////
   // Transposer
   ///////////////////////////////////////////////////////////////////////////
 
