@@ -135,6 +135,7 @@ NRPN LSB|   Range   | Default | Description
         |           |         |    bit 3: Force Scale on/off
         |           |         |    bit 4: Sustain on/off
         |           |         |    bit 5: First Note on/off
+        |           |         |    bit 6: Next step has to be triggered from transposer on/off
 --------+-----------+---------+------------------------------------------------
 0x22/ 34|   0 - 3   |       0 | Track Event Mode
         |           |         |    0: Note
